# Pytorch-Wavelet-Toolbox-Review

./: README.rst  setup.cfg
docs/: conf.py
examples/network_compression/: mnist_compression.py  readme.md  wavelet_linear.py
src/ptwt/: conv_transform.py  matmul_transform.py  matmul_transform_2d.py  packets.py  sparse_math.py  wavelets_learnable.py
tests/: test_boundary_filters.py  test_convolution_fwt.py  test_matrix_fwt.py  test_packets.py  test_sparse_math.py
