##########################
# Setup.py Configuration #
##########################
[metadata]
name = ptwt
version = 0.0.14-dev
description = Differentiable and gpu enabled fast wavelet transforms in PyTorch
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs associated with the project
url = https://github.com/wavelet-detection/Pytorch-Wavelet-Toolbox-Review
download_url = https://github.com/wavelet-detection/Pytorch-Wavelet-Toolbox-Review/releases
project_urls =
    Bug Tracker = https://github.com/wavelet-detection/Pytorch-Wavelet-Toolbox-Review/issues
    Source Code = https://github.com/wavelet-detection/Pytorch-Wavelet-Toolbox-Review

# Author information
author = anonymous
author_email = anonymousauthors53@yahoo.com
maintainer = anonyoums
maintainer_email = anonymousauthors53@yahoo.com


classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
install_requires =
    PyWavelets
    torch
    scipy
    matplotlib

packages = find:
package_dir =
    = src

[options.packages.find]
where = src


##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short
